--- a/default.env
+++ b/default.env
@@ -105,7 +105,7 @@ TEKU_DOCKERFILE=Dockerfile.binary
 
 # Lighthouse
 LH_SRC_BUILD_TARGET=stable
-LH_DOCKER_TAG=latest
+LH_DOCKER_TAG=latest-unstable
 LH_DOCKERFILE=Dockerfile.binary
 
 # Prysm
