--- a/nm.yml
+++ b/nm.yml
@@ -52,6 +52,7 @@ services:
       - ${EC_RPC_PORT}
       - --JsonRpc.WebSocketsPort
       - ${EC_WS_PORT}
+      - --NoCategory.CorsOrigins=*
       - --Sync.FastSync
       - "true"
       - --config
@@ -60,6 +61,12 @@ services:
       - "true"
       - --Pruning.CacheMb
       - "4096"
+      - --Sync.AncientBodiesBarrier
+      - "1"
+      - --Sync.AncientReceiptsBarrier
+      - "1"
+      - --NoCategory.LogLevel
+      - ${LOG_LEVEL}
   eth:
     depends_on:
       - execution
