--- a/besu/Dockerfile.source
+++ b/besu/Dockerfile.source
@@ -1,5 +1,5 @@
 # Build Besu in a stock debian container
-FROM eclipse-temurin:17-jdk-focal as builder
+FROM eclipse-temurin:11-jdk-focal as builder
 
 # This is here to avoid build-time complaints
 ARG DOCKER_TAG
@@ -9,10 +9,10 @@ ARG BUILD_TARGET
 RUN apt-get update && apt-get install -y --no-install-recommends ca-certificates git
 
 WORKDIR /usr/src
-RUN bash -c "git clone --recursive https://github.com/hyperledger/besu.git && cd besu && git config advice.detachedHead false && git fetch --all --tags && git checkout ${BUILD_TARGET} && ./gradlew installDist"
+RUN bash -c "git clone --recurse-submodules https://github.com/hyperledger/besu.git && cd besu && git config advice.detachedHead false && git fetch --all --tags && git checkout ${BUILD_TARGET} && ./gradlew installDist"
 
 # Pull all binaries into a second stage deploy debian container
-FROM eclipse-temurin:17-focal
+FROM eclipse-temurin:17-jre-focal
 
 ARG USER=besu
 ARG UID=10001
