Newer Geth, testing newer LH

--- a/default.env
+++ b/default.env
@@ -105,7 +105,7 @@ TEKU_DOCKERFILE=Dockerfile.binary
 
 # Lighthouse
 LH_SRC_BUILD_TARGET=stable
-LH_DOCKER_TAG=kitsugi
+LH_DOCKER_TAG=latest
 LH_DOCKERFILE=Dockerfile.binary
 
 # Prysm
@@ -125,7 +125,8 @@ ERIGON_DOCKERFILE=Dockerfile.binary
 
 # Go-Ethereum aka Geth
 GETH_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-GETH_DOCKER_TAG=merge-f72c361
+#GETH_DOCKER_TAG=merge-f72c361
+GETH_DOCKER_TAG=latest
 GETH_DOCKERFILE=Dockerfile.binary
 
 # Nethermind
