Besu add `--miner-enabled`

--- a/besu.yml
+++ b/besu.yml
@@ -72,6 +72,8 @@ services:
       - ${ENODE}
       - --Xmerge-support
       - "true"
+      - --miner-enabled
+      - "true"
       - --miner-coinbase
       - ${REWARDS_TO}
   eth:
