--- a/default.env
+++ b/default.env
@@ -138,7 +138,7 @@ NM_DOCKERFILE=Dockerfile.binary
 # Besu
 BESU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 #BESU_DOCKER_TAG=latest
-BESU_DOCKER_TAG=kintsugi-v3
+BESU_DOCKER_TAG=merge
 BESU_DOCKERFILE=Dockerfile.binary
 
 # eth2.0-deposit-cli
