Support binary build for eth2-val-tools

--- a/default.env
+++ b/default.env
@@ -147,5 +147,9 @@ DEPCLI_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=
 DEPCLI_DOCKER_TAG=nonesuch
 DEPCLI_LOCALDIR=./.eth
 
+# eth2-val-tools
+VALTOOL_DOCKER_TAG=latest
+VALTOOL_DOCKERFILE=Dockerfile.binary
+
 # For the Node Dashboard, define a regex of mount points to ignore for the diskspace check.
 NODE_EXPORTER_IGNORE_MOUNT_REGEX=^/(dev|proc|sys|run|var/lib/docker/.+)($|/)
