use jdk-11 to build from source and jre-17 to run, use kintsugi_v1 params

--- a/besu.yml
+++ b/besu.yml
@@ -63,16 +63,10 @@ services:
       - --metrics-enabled
       - --metrics-host
       - 0.0.0.0
-        #      - --Xdata-storage-format=BONSAI
-      - --genesis-file
-      - "/configs/besu_genesis.json"
-      - --network-id
-      - ${NETWORK_ID}
-      - --bootnodes
-      - ${ENODE}
+      - --network
+      - kintsugi_v1
       - --Xmerge-support
       - "true"
-      - --miner-enabled
       - --miner-coinbase
       - ${REWARDS_TO}
   eth:
