--- a/besu.yml
+++ b/besu.yml
@@ -63,6 +63,7 @@ services:
       - --metrics-enabled
       - --metrics-host
       - 0.0.0.0
+        #      - --Xdata-storage-format=BONSAI
       - --network
       - kintsugi_v1
       - --Xmerge-support
