--- a/default.env
+++ b/default.env
@@ -58,7 +58,7 @@ BEACON_STATS_MACHINE=
 
 # P2P ports you will forward to your staking node. Adjust here if you are
 # going to use something other than defaults.
-EL_P2P_PORT=30303
+EL_P2P_PORT=33333
 CL_P2P_PORT=9000
 # Local grafana dashboard port. Do not expose to Internet, it is insecure http
 GRAFANA_PORT=3000
@@ -101,7 +101,7 @@ NIM_DOCKERFILE=Dockerfile.binary
 # Teku
 TEKU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 TEKU_DOCKER_TAG=develop
-TEKU_DOCKERFILE=Dockerfile.binary
+TEKU_DOCKERFILE=Dockerfile.source
 
 # Lighthouse
 LH_SRC_BUILD_TARGET=stable
@@ -136,10 +136,11 @@ NM_DOCKER_TAG=kintsugi_0.8
 NM_DOCKERFILE=Dockerfile.binary
 
 # Besu
-BESU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+#BESU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+BESU_SRC_BUILD_TARGET=merge
 #BESU_DOCKER_TAG=latest
 BESU_DOCKER_TAG=merge
-BESU_DOCKERFILE=Dockerfile.binary
+BESU_DOCKERFILE=Dockerfile.source
 
 # eth2.0-deposit-cli
 DEPCLI_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
