--- a/blox-ssv.yml
+++ b/blox-ssv.yml
@@ -9,7 +9,7 @@ x-logging: &logging
 services:
   ssv-node:
     restart: "${RESTART}"
-    image: bloxstaking/ssv-node:${SSV_NODE_TAG:-latest}
+    image: bloxstaking/ssv-node:${SSV_NODE_TAG:-latest-ubuntu}
     user: 12000:12000
     volumes:
       - ./blox-ssv-config.yaml:/config.yaml
@@ -28,7 +28,7 @@ services:
       - ssv-node
   ssv-generate-keys:
     restart: "no"
-    image: bloxstaking/ssv-node:${SSV_NODE_TAG:-v0.1.8}
+    image: bloxstaking/ssv-node:${SSV_NODE_TAG:-latest-ubuntu}
     command: /go/bin/ssvnode generate-operator-keys
 volumes:
   ssv-data:
