Initial integration with Wagyu

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ ext-network.yml
 .eth/*
 !.eth/README.md
 !.eth/validator_keys/.empty
+!.eth/keymanagertoken/.empty
 *.swp
 alertmanager/config.yml
 blox-ssv-config.yaml
