--- a/default.env
+++ b/default.env
@@ -59,12 +59,9 @@ BEACON_STATS_MACHINE=
 # P2P ports you will forward to your staking node. Adjust here if you are
 # going to use something other than defaults.
 EC_P2P_PORT=30303
-LH_PORT=9000
-LS_PORT=9000
-PRYSM_PORT=13000
-PRYSM_UDP_PORT=12000
-NIM_PORT=9000
-TEKU_PORT=9000
+CC_P2P_PORT=9000
+PRYSM_PORT=9000
+PRYSM_UDP_PORT=9000
 # Local grafana dashboard port. Do not expose to Internet, it is insecure http
 GRAFANA_PORT=3000
 # Local prysm web UI port. Do not expose to Internet, it is insecure http
