--- a/lh-base.yml
+++ b/lh-base.yml
@@ -22,8 +22,8 @@ services:
       - lhbeacon-data:/var/lib/lighthouse
       - /etc/localtime:/etc/localtime:ro
     ports:
-      - ${LH_PORT}:${LH_PORT}/tcp
-      - ${LH_PORT}:${LH_PORT}/udp
+      - ${CC_P2P_PORT}:${CC_P2P_PORT}/tcp
+      - ${CC_P2P_PORT}:${CC_P2P_PORT}/udp
     expose:
       - 5052/tcp
       - 5054/tcp
@@ -46,7 +46,7 @@ services:
       - --network
       - ${NETWORK}
       - --port
-      - ${LH_PORT}
+      - ${CC_P2P_PORT}
       - --target-peers
       - ${LH_PEER_COUNT}
       - --eth1-endpoints
@@ -94,6 +94,8 @@ services:
       - lhvalidator-data:/var/lib/lighthouse
       - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
       - /etc/localtime:/etc/localtime:ro
+    environment:
+      - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-''}
     entrypoint:
       - validator-import.sh
       - lighthouse
