--- a/teku-base.yml
+++ b/teku-base.yml
@@ -26,8 +26,8 @@ services:
     expose:
       - 8008/tcp
     ports:
-      - ${TEKU_PORT}:${TEKU_PORT}/tcp
-      - ${TEKU_PORT}:${TEKU_PORT}/udp
+      - ${CC_P2P_PORT}:${CC_P2P_PORT}/tcp
+      - ${CC_P2P_PORT}:${CC_P2P_PORT}/udp
     networks:
       default:
         aliases:
@@ -40,7 +40,7 @@ services:
       - --network=${NETWORK}
       - --eth1-endpoints=${EC_NODE}
       - --eth1-deposit-contract-max-request-size=150
-      - --p2p-port=${TEKU_PORT}
+      - --p2p-port=${CC_P2P_PORT}
       - --p2p-peer-upper-bound=${TEKU_PEER_COUNT}
       - --validators-keystore-locking-enabled=true
       - --validator-keys=/var/lib/teku/validator-keys:/var/lib/teku/validator-passwords
@@ -63,6 +63,8 @@ services:
       - teku-data:/var/lib/teku
       - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
       - /etc/localtime:/etc/localtime:ro
+    environment:
+      - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-''}
     entrypoint: validator-import.sh
   validator-exit:
     restart: "no"
