--- a/teku-validator.yml
+++ b/teku-validator.yml
@@ -40,6 +40,8 @@ services:
       - teku-data:/var/lib/teku
       - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
       - /etc/localtime:/etc/localtime:ro
+    environment:
+      - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-''}
     entrypoint: validator-import.sh
   validator-exit:
     restart: "no"
