--- a/lodestar-validator.yml
+++ b/lodestar-validator.yml
@@ -25,7 +25,7 @@ services:
     entrypoint:
       - node
       - --max-old-space-size=8192
-      - /usr/app/packages/cli/bin/lodestar
+      - /usr/app/node_modules/.bin/lodestar
       - validator
       - --rootDir
       - /var/lib/lodestar/validators
@@ -49,7 +49,7 @@ services:
       - validator-import.sh
       - node
       - --max-old-space-size=8192
-      - /usr/app/packages/cli/bin/lodestar
+      - /usr/app/node_modules/.bin/lodestar
       - account
       - validator
       - import
@@ -68,7 +68,7 @@ services:
     entrypoint:
       - node
       - --max-old-space-size=8192
-      - /usr/app/packages/cli/bin/lodestar
+      - /usr/app/node_modules/.bin/lodestar
       - account
       - validator
       - voluntary-exit
@@ -90,7 +90,7 @@ services:
     entrypoint:
       - node
       - --max-old-space-size=8192
-      - /usr/app/packages/cli/bin/lodestar
+      - /usr/app/node_modules/.bin/lodestar
       - account
       - validator
       - --rootDir
