--- a/geth.yml
+++ b/geth.yml
@@ -9,7 +9,7 @@ x-logging: &logging
 services:
   geth_init:
     restart: "no"
-    image: geth:local
+    image: geth:local-merge
     user: geth
     volumes:
       - gethexecution-data:/var/lib/goethereum
@@ -30,7 +30,7 @@ services:
         - BUILD_TARGET=${GETH_SRC_BUILD_TARGET}
         - DOCKER_TAG=${GETH_DOCKER_TAG}
     stop_grace_period: 3m
-    image: geth:local
+    image: geth:local-merge
     user: geth
     volumes:
       - gethexecution-data:/var/lib/goethereum
