--- a/lh-consensus.yml
+++ b/lh-consensus.yml
@@ -15,7 +15,7 @@ services:
       args:
         - BUILD_TARGET=${LH_SRC_BUILD_TARGET}
         - DOCKER_TAG=${LH_DOCKER_TAG}
-    image: lighthouse:local
+    image: lighthouse:local-merge
     user: lhconsensus
     stop_grace_period: 1m
     volumes:
