--- a/lodestar-consensus.yml
+++ b/lodestar-consensus.yml
@@ -15,7 +15,7 @@ services:
       args:
         - BUILD_TARGET=${LS_SRC_BUILD_TARGET}
         - DOCKER_TAG=${LS_DOCKER_TAG}
-    image: lodestar:local
+    image: lodestar:local-merge
     user: lsconsensus
     stop_grace_period: 1m
     volumes:
