--- a/prysm-stats.yml
+++ b/prysm-stats.yml
@@ -14,7 +14,7 @@ services:
       - --monitoring-host
       - 0.0.0.0
   client-stats:
-    image: prysm-consensus:local
+    image: prysm-consensus:local-merge
     volumes:
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
