--- a/teku-consensus.yml
+++ b/teku-consensus.yml
@@ -15,7 +15,7 @@ services:
         - BUILD_TARGET=${TEKU_SRC_BUILD_TARGET}
         - DOCKER_TAG=${TEKU_DOCKER_TAG}
       dockerfile: ${TEKU_DOCKERFILE}
-    image: teku:local
+    image: teku:local-merge
     user: teku
     stop_grace_period: 1m
     volumes:
