--- a/lh-validator.yml
+++ b/lh-validator.yml
@@ -15,7 +15,7 @@ services:
       args:
         - BUILD_TARGET=${LH_SRC_BUILD_TARGET}
         - DOCKER_TAG=${LH_DOCKER_TAG}
-    image: lighthouse:local
+    image: lighthouse:local-merge
     user: lhvalidator
     expose:
       - 5064/tcp
@@ -43,7 +43,7 @@ services:
       - ${TOTAL_TERMINAL_DIFFICULTY}
   validator-import:
     restart: "no"
-    image: lighthouse:local
+    image: lighthouse:local-merge
     user: root
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
@@ -62,7 +62,7 @@ services:
       - --debug-level=${LOG_LEVEL}
   validator-exit:
     restart: "no"
-    image: lighthouse:local
+    image: lighthouse:local-merge
     user: root
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
@@ -86,7 +86,7 @@ services:
       - --keystore
   validator-account:
     restart: "no"
-    image: lighthouse:local
+    image: lighthouse:local-merge
     user: lhvalidator
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
