--- a/prysm-base.yml
+++ b/prysm-base.yml
@@ -19,7 +19,7 @@ services:
     build:
       target: consensus
       <<: *prysm-build
-    image: prysm-consensus:local
+    image: prysm-consensus:local-merge
     user: prysmconsensus
     stop_grace_period: 1m
     volumes:
@@ -74,7 +74,7 @@ services:
     build:
       target: validator
       <<: *prysm-build
-    image: prysm-validator:local
+    image: prysm-validator:local-merge
     #user: prysmvalidator
     user: root
     expose:
@@ -122,7 +122,7 @@ services:
   validator-account-list:
     restart: "no"
     user: prysmvalidator
-    image: prysm-validator:local
+    image: prysm-validator:local-merge
     volumes:
       - prysmvalidator-data:/var/lib/prysm
       - /etc/localtime:/etc/localtime:ro
@@ -139,7 +139,7 @@ services:
   validator-exit:
     restart: "no"
     user: prysmvalidator
-    image: prysm-validator:local
+    image: prysm-validator:local-merge
     volumes:
       - prysmvalidator-data:/var/lib/prysm
       - /etc/localtime:/etc/localtime:ro
