NM parameters, LH modern, better update experience

--- a/default.env
+++ b/default.env
@@ -107,7 +107,7 @@ TEKU_DOCKERFILE=Dockerfile.binary
 
 # Lighthouse
 LH_SRC_BUILD_TARGET=stable
-LH_DOCKER_TAG=latest
+LH_DOCKER_TAG=latest-modern
 LH_DOCKERFILE=Dockerfile.binary
 
 # Prysm
