--- a/lh-consensus.yml
+++ b/lh-consensus.yml
@@ -22,8 +22,8 @@ services:
       - lhconsensus-data:/var/lib/lighthouse
       - /etc/localtime:/etc/localtime:ro
     ports:
-      - ${CC_P2P_PORT}:${CC_P2P_PORT}/tcp
-      - ${CC_P2P_PORT}:${CC_P2P_PORT}/udp
+      - ${CC_P2P_PORT:-9000}:${CC_P2P_PORT:-9000}/tcp
+      - ${CC_P2P_PORT:-9000}:${CC_P2P_PORT:-9000}/udp
     expose:
       - 5052/tcp
       - 5054/tcp
@@ -46,7 +46,7 @@ services:
       - --network
       - ${NETWORK}
       - --port
-      - ${CC_P2P_PORT}
+      - ${CC_P2P_PORT:-9000}
       - --target-peers
       - ${LH_PEER_COUNT}
       - --eth1-endpoints
