ensure besu uses full-sync for kintsugi, wipe keys directory on re-generate keys
Signed-off-by: garyschulte <garyschulte@gmail.com>

--- a/besu.yml
+++ b/besu.yml
@@ -64,6 +64,7 @@ services:
       - --metrics-host
       - 0.0.0.0
         #      - --Xdata-storage-format=BONSAI
+      - --sync-mode=FULL
       - --network
       - kintsugi_v1
       - --Xmerge-support
