--- a/lh-base.yml
+++ b/lh-base.yml
@@ -63,6 +63,8 @@ services:
     restart: "${RESTART}"
     image: lighthouse:local
     user: lhvalidator
+    ports:
+      - 127.0.0.1:5062:5062/tcp
     expose:
       - 5064/tcp
     volumes:
@@ -84,8 +86,27 @@ services:
       - --metrics
       - --metrics-address
       - 0.0.0.0
+      - --http
+      - --http-address
+      - 0.0.0.0
+      - --http-allow-origin
+      - "*"
+      - --unencrypted-http-transport
     depends_on:
       - consensus
+  get-keyapi-token:
+    restart: "no"
+    image: alpine:latest
+    user: "10000"
+    volumes:
+      - lhvalidator-data:/var/lib/lighthouse
+      - /etc/localtime:/etc/localtime:ro
+    <<: *logging
+    entrypoint: ["/bin/sh","-c"]
+    command:
+      - |
+        cat /var/lib/lighthouse/validators/api-token.txt
+        echo
   validator-import:
     restart: "no"
     image: lighthouse:local
