--- a/lh-validator.yml
+++ b/lh-validator.yml
@@ -17,6 +17,8 @@ services:
         - DOCKER_TAG=${LH_DOCKER_TAG}
     image: lighthouse:local
     user: lhvalidator
+    ports:
+      - 127.0.0.1:5062:5062/tcp
     expose:
       - 5064/tcp
     volumes:
@@ -38,6 +40,25 @@ services:
       - --metrics
       - --metrics-address
       - 0.0.0.0
+      - --http
+      - --http-address
+      - 0.0.0.0
+      - --http-allow-origin
+      - "*"
+      - --unencrypted-http-transport
+  get-keyapi-token:
+    restart: "no"
+    image: alpine:latest
+    user: "10000"
+    volumes:
+      - lhvalidator-data:/var/lib/lighthouse
+      - /etc/localtime:/etc/localtime:ro
+    <<: *logging
+    entrypoint: ["/bin/sh","-c"]
+    command:
+      - |
+        cat /var/lib/lighthouse/validators/api-token.txt
+        echo
   validator-import:
     restart: "no"
     image: lighthouse:local
