--- a/prysm/Dockerfile.binary
+++ b/prysm/Dockerfile.binary
@@ -64,4 +64,8 @@ RUN mkdir -p /var/lib/prysm && chown ${USER}:${USER} /var/lib/prysm && chmod 700
 
 COPY --from=vcsource /app/cmd/validator/validator /usr/local/bin/
 COPY ./validator-import.sh /usr/local/bin/
+COPY ./create-wallet.sh /usr/local/bin/
+
 USER ${USER}
+
+ENTRYPOINT ["validator"]
