--- a/prysm/Dockerfile.source
+++ b/prysm/Dockerfile.source
@@ -73,5 +73,8 @@ RUN adduser \
 RUN mkdir -p /var/lib/prysm && chown ${USER}:${USER} /var/lib/prysm && chmod 700 /var/lib/prysm
 
 COPY ./validator-import.sh /usr/local/bin/
+COPY ./create-wallet.sh /usr/local/bin/
 
 USER ${USER}
+
+ENTRYPOINT ["validator"]
