--- a/teku-base.yml
+++ b/teku-base.yml
@@ -23,6 +23,8 @@ services:
       - /etc/localtime:/etc/localtime:ro
     environment:
       - JAVA_OPTS=-XX:SoftMaxHeapSize=2g -Xmx4g
+    ports:
+      - 127.0.0.1:5062:5062/tcp
     expose:
       - 8008/tcp
     ports:
@@ -34,6 +36,7 @@ services:
           - eth2
     <<: *logging
     entrypoint:
+      - docker-entrypoint.sh
       - /opt/teku/bin/teku
       - --data-path=/var/lib/teku
       - --log-destination=CONSOLE
@@ -54,7 +57,26 @@ services:
       - --metrics-port=8008
       - --metrics-interface=0.0.0.0
       - --metrics-host-allowlist=*
+      - --validator-api-enabled=true
+      - --validator-api-port=5062
+      - --validator-api-host-allowlist=*
+      - --validator-api-cors-origins=*
+      - --validator-api-keystore-file=/var/lib/teku/teku-keyapi.keystore
+      - --validator-api-keystore-password-file=/var/lib/teku/teku-keyapi.password
     command: ${TEKU_RAPID_SYNC}
+  get-keyapi-token:
+    restart: "no"
+    image: alpine:latest
+    user: "10002"
+    volumes:
+      - teku-data:/var/lib/teku
+      - /etc/localtime:/etc/localtime:ro
+    <<: *logging
+    entrypoint: ["/bin/sh","-c"]
+    command:
+      - |
+        cat var/lib/teku/validator/key-manager/validator-api-bearer
+        echo
   validator-import:
     restart: "no"
     image: teku:local
