--- a/nimbus-base.yml
+++ b/nimbus-base.yml
@@ -26,7 +26,7 @@ services:
     ports:
       - ${CC_P2P_PORT:-9000}:${CC_P2P_PORT:-9000}/tcp
       - ${CC_P2P_PORT:-9000}:${CC_P2P_PORT:-9000}/udp
-      - 127.0.0.1:5062:5062/tcp
+      - 127.0.0.1:${KEY_API_PORT:-7500}:${KEY_API_PORT:-7500}/tcp
     networks:
       default:
         aliases:
@@ -60,7 +60,7 @@ services:
       - --metrics-address=0.0.0.0
       - --validator-monitor-auto
       - --keymanager
-      - --keymanager-port=5062
+      - --keymanager-port=${KEY_API_PORT:-7500}
       - --keymanager-address=0.0.0.0
       - --keymanager-token-file=/var/lib/nimbus/api-token.txt
     command: ${NIMBUS_RAPID_SYNC}
