New repo for heimdall/bor

--- a/polygon-mainnet.env
+++ b/polygon-mainnet.env
@@ -1,8 +1,8 @@
 COMPOSE_FILE=bor.yml:bor-shared.yml
 BOR_NODE_ID=COMPANY-mainnet-UNIQUEID
 HEIMDALL_ETH_RPC_URL=http://MYETHNODECONTAINER:8545
-HEIMDALL_TAG=v0.2.4
-BOR_TAG=v0.2.13
+HEIMDALL_TAG=0.2.5
+BOR_TAG=0.2.14
 BOR_SRC_TAG=master
 BOR_DOCKER_FILE=Dockerfile.borbinary
 # Comma-separated list of addresses to treat as "local"
@@ -49,4 +49,3 @@ RESTART=unless-stopped
 
 # Unused but here for reference
 BOR_START=https://raw.githubusercontent.com/maticnetwork/launch/master/mainnet-v1/sentry/sentry/bor/start.sh
-
