--- a/polygon/Dockerfile.heimdall
+++ b/polygon/Dockerfile.heimdall
@@ -1,6 +1,6 @@
 ARG DOCKER_TAG
 
-FROM maticnetwork/heimdall:${DOCKER_TAG} as source
+FROM 0xpolygon/heimdall:${DOCKER_TAG} as source
 
 FROM debian:bullseye-slim
 
