--- a/prysm-consensus-rest.yml
+++ b/prysm-consensus-rest.yml
@@ -79,6 +79,10 @@ services:
       - traefik.http.routers.cc.rule=Host(`${CC_HOST}.${DOMAIN}`)
       - traefik.http.routers.cc.service=cc
       - traefik.http.routers.cc.tls.certresolver=letsencrypt
+      - traefik.http.routers.cclb.service=cc
+      - traefik.http.routers.cclb.entrypoints=websecure
+      - traefik.http.routers.cclb.rule=Host(`${CC_LB}.${DOMAIN}`)
+      - traefik.http.routers.cclb.tls.certresolver=letsencrypt
       - traefik.http.services.cc.loadbalancer.server.port=5052
   eth:
     image: tianon/true
