Fix Lodestar rapid sync, use new format

--- a/default.env
+++ b/default.env
@@ -40,11 +40,11 @@ DDNS_PROXY=true
 #TEKU_RAPID_SYNC=--initial-state=https://{projectid}:{secret}@eth2-beacon-${NETWORK}.infura.io/eth/v1/debug/beacon/states/finalized
 #LH_RAPID_SYNC=--checkpoint-sync-url=https://{projectid}:{secret}@eth2-beacon-${NETWORK}.infura.io/
 #NIMBUS_RAPID_SYNC=--trusted-node-url=https://{projectid}:{secret}@eth2-beacon-${NETWORK}.infura.io/
+#LS_RAPID_SYNC=--weakSubjectivitySyncLatest=true --weakSubjectivityServerUrl=https://{projectid}:{secret}@eth2-beacon-${NETWORK}.infura.io/
 TEKU_RAPID_SYNC=
 LH_RAPID_SYNC=
 NIMBUS_RAPID_SYNC=
-# Set this to true to rapid sync Lodestar
-LS_RAPID_SYNC=false
+LS_RAPID_SYNC=
 
 # Consensus client address. This could be comma-separated for Lighthouse, with Infura as failover,
 # or could just be a remote consensus client URL for Teku, Lighthouse or Prysm "validator only" setups. Not in use for Nimbus.
