NM logs the proper way

--- a/nm.yml
+++ b/nm.yml
@@ -64,6 +64,8 @@ services:
       - "1"
       - --Sync.AncientReceiptsBarrier
       - "1"
+      - --log
+      - ${LOG_LEVEL}
   eth:
     depends_on:
       - execution
