--- a/geth/Dockerfile.source
+++ b/geth/Dockerfile.source
@@ -31,6 +31,7 @@ RUN mkdir -p /var/lib/goethereum && chown ${USER}:${USER} /var/lib/goethereum
 
 # Copy executable
 COPY --from=builder /src/go-ethereum/build/bin/geth /usr/local/bin/
+COPY ./docker-entrypoint.sh /usr/local/bin/
 
 USER ${USER}
 
