--- a/grafana/datasource.yml
+++ b/grafana/datasource.yml
@@ -6,6 +6,9 @@ deleteDatasources:
   - name: Prometheus
     orgId: 1
 
+  - name: Loki
+    orgId: 1
+
 # list of datasources to insert/update depending
 # whats available in the database
 datasources:
@@ -16,5 +19,15 @@ datasources:
     url: http://prometheus:9090
     basicAuth: false
     isDefault: true
+    version: 1
+    editable: true
+
+  - name: Loki
+    type: loki
+    access: proxy
+    orgId: 1
+    url: http://loki:3100
+    basicAuth: false
+    isDefault: false
     version: 1
     editable: true
